Update build.sbt